Step totaly ready

--- a/Step_5_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_5_Project_Health_Insurance_Cross_Sell.ipynb
@@ -27,8 +27,8 @@
     "from tabulate import tabulate\n",
     "from matplotlib import pyplot as plt\n",
     "from IPython.core.display    import HTML\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler,StandardScaler"
+    "from sklearn import model_selection as ms\n",
+    "from sklearn.preprocessing import MinMaxScaler,StandardScaler"
    ]
   },
   {
@@ -1969,24 +1969,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "f4b6b3a5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-02T14:35:36.036276Z",
-     "start_time": "2022-10-02T14:35:36.024264Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "c6a62537",
+   "metadata": {},
    "source": [
-    "from sklearn import model_selection as ms"
+    "## 5.1 - Split Data between train and test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5b378ad8",
+   "id": "6e34dd24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-02T14:41:10.320065Z",
@@ -2013,7 +2006,7 @@
    "id": "65a0c80f",
    "metadata": {},
    "source": [
-    "## 5.1 Standardizing the Data"
+    "## 5.2 Standardizing the Data"
    ]
   },
   {
@@ -2119,7 +2112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d281d9d",
+   "id": "0c970f1c",
    "metadata": {},
    "source": [
     "## 5.4 - Validation Preparation"
@@ -2128,7 +2121,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "283e0e8f",
+   "id": "83d5bd98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-02T15:02:46.144383Z",
@@ -2161,41 +2154,6 @@
     "#remove all NaN\n",
     "x_val = x_val.fillna(0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "id": "0743f566",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-02T15:02:48.493553Z",
-     "start_time": "2022-10-02T15:02:48.467336Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id                      0\n",
-       "previously_insured      0\n",
-       "annual_premium          0\n",
-       "vintage                 0\n",
-       "gender                  0\n",
-       "age                     0\n",
-       "region_code             0\n",
-       "policy_sales_channel    0\n",
-       "driving_license         0\n",
-       "vehicle_age             0\n",
-       "vehicle_damage          0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
