Making the code api local

--- a/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "aa8c1c8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:20.004386Z",
-     "start_time": "2022-12-02T22:09:13.995042Z"
+     "end_time": "2022-12-04T20:41:58.359840Z",
+     "start_time": "2022-12-04T20:41:54.324176Z"
     }
    },
    "outputs": [],
@@ -3927,12 +3927,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fc0f6ec",
+   "cell_type": "markdown",
+   "id": "da651fe2",
    "metadata": {},
+   "source": [
+    "## 10.1 - API Handler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "06b7f865",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-04T20:40:04.855245Z",
+     "start_time": "2022-12-04T20:40:04.642618Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from flask import Flask, request, Response\n",
+    "\n",
+    "model = pickle.load(open('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl','rb' ) )\n",
+    "\n",
+    "#collecting the past archive and imnport class\n",
+    "from insurance.Insurance import Insurance\n",
+    "\n",
+    "#start api\n",
+    "app = Flask( _name_ )\n",
+    "\n",
+    "#creating url (endpoint) to send data\n",
+    "app.route('/insurance/predict', methods=['POST'] )\n",
+    "\n",
+    "def insurance_predict():\n",
+    "    test_json = request.get_json()\n",
+    "    \n",
+    "    if test_json: #In there is data\n",
+    "        \n",
+    "        if isintance(test_json, dict): #unique example\n",
+    "            #in case there is only row\n",
+    "            test_row = pd.DataFrame(test_json, index=[0] )\n",
+    "            \n",
+    "        else:\n",
+    "            #colletcting all json of all all rows\n",
+    "            test_row= pd.DataFrame(test_json, columns=test_json[0].keys() )#multiples examples\n",
+    "        \n",
+    "        #Instance the class (Making the copy)\n",
+    "        \n",
+    "        pipeline = Insurance()\n",
+    "        \n",
+    "        df1 = pipeline.cleaniing_data(test_row)\n",
+    "        \n",
+    "        df2 = pipeline.feature_engineering(df1)\n",
+    "        \n",
+    "        df3 = pipeline.data_preparation(df2)\n",
+    "        \n",
+    "        #predict of probability\n",
+    "        df_response= pipeline.get_prediction(model, df3)\n",
+    "    \n",
+    "        return df_response\n",
+    "    \n",
+    "    else: #If case empty\n",
+    "        return Response( '{}', status=200, mimetype='application/json')\n",
+    "\n",
+    "if __name__ = '_main_':\n",
+    "    app.run('0.0.0.0')"
+   ]
   }
  ],
  "metadata": {
