Making the details handler.py

--- a/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
@@ -3812,9 +3812,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d843c01f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-05T21:40:24.375475Z",
+     "start_time": "2022-12-05T21:40:22.215086Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#cleaning, transformation and enconding\n",
@@ -3916,7 +3921,7 @@
     "            pred = model.predict_proba(test_data)\n",
     "            \n",
     "            #create new feature of score probabilty\n",
-    "            original_data['proba'] = pred.[:,1].tolist()\n",
+    "            original_data['proba'] = pred[:,1].tolist()\n",
     "\n",
     "            #ordened the values\n",
     "            original_data = original_data.sort_values(by='proba',ascending=False)\n",
@@ -3936,31 +3941,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "06b7f865",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-04T20:40:04.855245Z",
-     "start_time": "2022-12-04T20:40:04.642618Z"
+     "end_time": "2022-12-05T22:26:32.656119Z",
+     "start_time": "2022-12-05T22:26:32.594420Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'insurance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#collecting the past archive and imnport class\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01minsurance\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mInsurance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Insurance\n\u001b[1;32m     11\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m ) )\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#start api\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'insurance'"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import requests\n",
     "from flask import Flask, request, Response\n",
     "\n",
-    "model = pickle.load(open('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl','rb' ) )\n",
     "\n",
     "#collecting the past archive and imnport class\n",
     "from insurance.Insurance import Insurance\n",
     "\n",
+    "model = pickle.load(open('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl','rb' ) )\n",
+    "\n",
+    "\n",
     "#start api\n",
-    "app = Flask( _name_ )\n",
+    "app = Flask(__name__)\n",
     "\n",
     "#creating url (endpoint) to send data\n",
-    "app.route('/insurance/predict', methods=['POST'] )\n",
+    "@app.route('/predict', methods=['POST'] )\n",
     "\n",
     "def insurance_predict():\n",
     "    test_json = request.get_json()\n",
@@ -3993,7 +4013,7 @@
     "    else: #If case empty\n",
     "        return Response( '{}', status=200, mimetype='application/json')\n",
     "\n",
-    "if __name__ = '_main_':\n",
+    "if __name__ == '_main_':\n",
     "    app.run('0.0.0.0')"
    ]
   }
