Start Test Local

--- a/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
@@ -3812,12 +3812,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d843c01f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-05T21:40:24.375475Z",
-     "start_time": "2022-12-05T21:40:22.215086Z"
+     "end_time": "2022-12-09T22:45:54.707342Z",
+     "start_time": "2022-12-09T22:45:52.564447Z"
     }
    },
    "outputs": [],
@@ -3941,40 +3941,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "06b7f865",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-12-05T22:26:32.656119Z",
-     "start_time": "2022-12-05T22:26:32.594420Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'insurance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#collecting the past archive and imnport class\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01minsurance\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mInsurance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Insurance\n\u001b[1;32m     11\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m ) )\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#start api\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'insurance'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "5fc870d3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import requests\n",
+    "import xgboost as xgb\n",
     "from flask import Flask, request, Response\n",
     "\n",
     "\n",
     "#collecting the past archive and imnport class\n",
     "from insurance.Insurance import Insurance\n",
     "\n",
-    "model = pickle.load(open('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_insurance.pkl','rb' ) )\n",
     "\n",
+    "model = xgb.XGBClassifier()\n",
+    "\n",
+    "model.load_model('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_cross_sell.json')\n",
     "\n",
     "#start api\n",
     "app = Flask(__name__)\n",
@@ -4007,14 +3993,54 @@
     "        \n",
     "        #predict of probability\n",
     "        df_response= pipeline.get_prediction(model, df3)\n",
-    "    \n",
+    "       \n",
     "        return df_response\n",
     "    \n",
     "    else: #If case empty\n",
     "        return Response( '{}', status=200, mimetype='application/json')\n",
+    "    \n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    port = os.environ.get( 'PORT', 5000 )\n",
+    "    app.run( host = '0.0.0.0', port=port )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a4941f2",
+   "metadata": {},
+   "source": [
+    "* Serving Flask app 'handler'\n",
+    " * Debug mode: off\n",
+    " \n",
+    "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+    " * Running on all addresses (0.0.0.0)\n",
+    " * Running on http://127.0.0.1:5000\n",
+    " * Running on http://192.168.1.7:5000\n",
     "\n",
-    "if __name__ == '_main_':\n",
-    "    app.run('0.0.0.0')"
+    "Press CTRL+C to quit\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "209ae102",
+   "metadata": {},
+   "source": [
+    "## API Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56d9719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import request\n",
+    "import pandas as pd\n",
+    "\n",
+    "#loading the data of test"
    ]
   }
  ],
