Corretion of bugs local

--- a/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "aa8c1c8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-04T20:41:58.359840Z",
-     "start_time": "2022-12-04T20:41:54.324176Z"
+     "end_time": "2022-12-10T20:57:25.356808Z",
+     "start_time": "2022-12-10T20:57:20.953179Z"
     }
    },
    "outputs": [],
@@ -49,9 +49,7 @@
   {
    "cell_type": "markdown",
    "id": "2e587b24",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 0.1 HELPS FUNCTIONS"
    ]
@@ -62,10 +60,9 @@
    "id": "8eaf891f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:20.113330Z",
-     "start_time": "2022-12-02T22:09:20.027860Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:27.801817Z",
+     "start_time": "2022-12-10T20:57:27.767956Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,10 +109,9 @@
    "id": "4496554f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:20.281856Z",
-     "start_time": "2022-12-02T22:09:20.122308Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:28.898215Z",
+     "start_time": "2022-12-10T20:57:28.829888Z"
+    }
    },
    "outputs": [
     {
@@ -146,9 +142,7 @@
   {
    "cell_type": "markdown",
    "id": "921e8ab4",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 0.2 LOADING THE DATAS"
    ]
@@ -159,10 +153,9 @@
    "id": "abc581cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:21.410865Z",
-     "start_time": "2022-12-02T22:09:20.312401Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:35.093673Z",
+     "start_time": "2022-12-10T20:57:34.010491Z"
+    }
    },
    "outputs": [
     {
@@ -302,9 +295,7 @@
   {
    "cell_type": "markdown",
    "id": "6762d989",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1.0 DESCRIPTION THE DATAS"
    ]
@@ -315,10 +306,9 @@
    "id": "e9b60827",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:21.519005Z",
-     "start_time": "2022-12-02T22:09:21.438760Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:35.134592Z",
+     "start_time": "2022-12-10T20:57:35.108696Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -328,9 +318,7 @@
   {
    "cell_type": "markdown",
    "id": "098985de",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.1 RENAME COLUMNS"
    ]
@@ -338,9 +326,7 @@
   {
    "cell_type": "markdown",
    "id": "d0fac9b1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**The columns are in format snackcase. Then not is necessary rename the columns** "
    ]
@@ -351,10 +337,9 @@
    "id": "f2c9aa7c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:22.822011Z",
-     "start_time": "2022-12-02T22:09:22.763441Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:35.359951Z",
+     "start_time": "2022-12-10T20:57:35.339066Z"
+    }
    },
    "outputs": [
     {
@@ -378,9 +363,7 @@
   {
    "cell_type": "markdown",
    "id": "4e238ba3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.2 DATA DIMENSIONS"
    ]
@@ -391,10 +374,9 @@
    "id": "7e4035d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:24.211990Z",
-     "start_time": "2022-12-02T22:09:24.200634Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:35.642497Z",
+     "start_time": "2022-12-10T20:57:35.623594Z"
+    }
    },
    "outputs": [
     {
@@ -414,9 +396,7 @@
   {
    "cell_type": "markdown",
    "id": "b15fad63",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.3 DATA TYPES"
    ]
@@ -427,10 +407,9 @@
    "id": "99e944b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:29.816296Z",
-     "start_time": "2022-12-02T22:09:29.790572Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:35.947713Z",
+     "start_time": "2022-12-10T20:57:35.925717Z"
+    }
    },
    "outputs": [
     {
@@ -463,9 +442,7 @@
   {
    "cell_type": "markdown",
    "id": "8740a282",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.4 CHECK NA"
    ]
@@ -476,10 +453,9 @@
    "id": "d1ba43d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:31.793864Z",
-     "start_time": "2022-12-02T22:09:31.289596Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:36.549043Z",
+     "start_time": "2022-12-10T20:57:36.203641Z"
+    }
    },
    "outputs": [
     {
@@ -512,9 +488,7 @@
   {
    "cell_type": "markdown",
    "id": "61afd017",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.5 CHANGE TYPES"
    ]
@@ -525,10 +499,9 @@
    "id": "aef4ba2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:33.492421Z",
-     "start_time": "2022-12-02T22:09:33.440721Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:36.597802Z",
+     "start_time": "2022-12-10T20:57:36.562690Z"
+    }
    },
    "outputs": [
     {
@@ -567,9 +540,7 @@
   {
    "cell_type": "markdown",
    "id": "468583a6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.6 DESCRIPTIVE STASTITICS "
    ]
@@ -580,10 +551,9 @@
    "id": "f815b51a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:39.488270Z",
-     "start_time": "2022-12-02T22:09:39.474901Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:36.934674Z",
+     "start_time": "2022-12-10T20:57:36.920382Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -594,9 +564,7 @@
   {
    "cell_type": "markdown",
    "id": "d56a8391",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.7 NUMERIC ATTRIBUTES"
    ]
@@ -607,10 +575,9 @@
    "id": "684808e4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:41.561194Z",
-     "start_time": "2022-12-02T22:09:41.036114Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:37.675776Z",
+     "start_time": "2022-12-10T20:57:37.305566Z"
+    }
    },
    "outputs": [
     {
@@ -818,10 +785,9 @@
    "id": "e986aafb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:44.278236Z",
-     "start_time": "2022-12-02T22:09:41.921543Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:39.236402Z",
+     "start_time": "2022-12-10T20:57:37.682091Z"
+    }
    },
    "outputs": [
     {
@@ -842,9 +808,7 @@
   {
    "cell_type": "markdown",
    "id": "8989faee",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.7.1 CATEGORICAL ATTRIBUTES"
    ]
@@ -855,10 +819,9 @@
    "id": "1041bbd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:44.471361Z",
-     "start_time": "2022-12-02T22:09:44.287352Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:39.385081Z",
+     "start_time": "2022-12-10T20:57:39.248774Z"
+    }
    },
    "outputs": [
     {
@@ -886,10 +849,9 @@
    "id": "cbeaedf1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:48.183259Z",
-     "start_time": "2022-12-02T22:09:44.483206Z"
-    },
-    "hidden": true
+     "end_time": "2022-12-10T20:57:42.553994Z",
+     "start_time": "2022-12-10T20:57:39.393469Z"
+    }
    },
    "outputs": [
     {
@@ -931,8 +893,8 @@
    "id": "8c592a9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:09:48.259302Z",
-     "start_time": "2022-12-02T22:09:48.191902Z"
+     "end_time": "2022-12-10T20:57:42.644615Z",
+     "start_time": "2022-12-10T20:57:42.562716Z"
     }
    },
    "outputs": [],
@@ -1099,8 +1061,8 @@
    "id": "e4b65684",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:01.564117Z",
-     "start_time": "2022-12-02T22:10:00.849761Z"
+     "end_time": "2022-12-10T20:57:45.191011Z",
+     "start_time": "2022-12-10T20:57:44.499994Z"
     }
    },
    "outputs": [],
@@ -1151,8 +1113,8 @@
    "id": "91e4d3be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:21.955659Z",
-     "start_time": "2022-12-02T22:10:21.860413Z"
+     "end_time": "2022-12-10T20:57:47.160102Z",
+     "start_time": "2022-12-10T20:57:47.066465Z"
     }
    },
    "outputs": [],
@@ -1174,8 +1136,8 @@
    "id": "88778419",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:30.412445Z",
-     "start_time": "2022-12-02T22:10:27.930429Z"
+     "end_time": "2022-12-10T20:58:00.031791Z",
+     "start_time": "2022-12-10T20:57:57.943792Z"
     }
    },
    "outputs": [
@@ -1224,8 +1186,8 @@
    "id": "837cce18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:36.273042Z",
-     "start_time": "2022-12-02T22:10:30.429065Z"
+     "end_time": "2022-12-10T20:58:04.850877Z",
+     "start_time": "2022-12-10T20:58:00.043630Z"
     }
    },
    "outputs": [
@@ -1258,8 +1220,8 @@
    "id": "8e2394bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:39.599981Z",
-     "start_time": "2022-12-02T22:10:36.285382Z"
+     "end_time": "2022-12-10T20:58:13.884296Z",
+     "start_time": "2022-12-10T20:58:10.703831Z"
     }
    },
    "outputs": [
@@ -1333,8 +1295,8 @@
    "id": "ac8e174c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:43.433604Z",
-     "start_time": "2022-12-02T22:10:39.617158Z"
+     "end_time": "2022-12-10T20:58:20.963901Z",
+     "start_time": "2022-12-10T20:58:16.819648Z"
     }
    },
    "outputs": [
@@ -1392,8 +1354,8 @@
    "id": "436a21d3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:44.028710Z",
-     "start_time": "2022-12-02T22:10:43.440615Z"
+     "end_time": "2022-12-10T20:58:21.767791Z",
+     "start_time": "2022-12-10T20:58:20.976347Z"
     }
    },
    "outputs": [
@@ -1438,8 +1400,8 @@
    "id": "be696910",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:44.688453Z",
-     "start_time": "2022-12-02T22:10:44.041400Z"
+     "end_time": "2022-12-10T20:58:22.443189Z",
+     "start_time": "2022-12-10T20:58:21.779936Z"
     }
    },
    "outputs": [
@@ -1480,8 +1442,8 @@
    "id": "a29002f5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:45.194192Z",
-     "start_time": "2022-12-02T22:10:44.695122Z"
+     "end_time": "2022-12-10T20:58:22.975959Z",
+     "start_time": "2022-12-10T20:58:22.455868Z"
     }
    },
    "outputs": [
@@ -1523,8 +1485,8 @@
    "id": "0ed24680",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:45.684376Z",
-     "start_time": "2022-12-02T22:10:45.198886Z"
+     "end_time": "2022-12-10T20:58:23.477635Z",
+     "start_time": "2022-12-10T20:58:22.981940Z"
     }
    },
    "outputs": [
@@ -1564,8 +1526,8 @@
    "id": "ba54d292",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:46.489659Z",
-     "start_time": "2022-12-02T22:10:45.695280Z"
+     "end_time": "2022-12-10T20:58:24.299290Z",
+     "start_time": "2022-12-10T20:58:23.486773Z"
     }
    },
    "outputs": [
@@ -1628,8 +1590,8 @@
    "id": "91ac7cc6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:47.014626Z",
-     "start_time": "2022-12-02T22:10:46.502338Z"
+     "end_time": "2022-12-10T20:58:28.165847Z",
+     "start_time": "2022-12-10T20:58:27.486634Z"
     }
    },
    "outputs": [
@@ -1675,8 +1637,8 @@
    "id": "81e3a5b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:49.010553Z",
-     "start_time": "2022-12-02T22:10:47.024904Z"
+     "end_time": "2022-12-10T20:58:30.711469Z",
+     "start_time": "2022-12-10T20:58:28.174147Z"
     }
    },
    "outputs": [
@@ -1734,8 +1696,8 @@
    "id": "7cff79fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:50.071197Z",
-     "start_time": "2022-12-02T22:10:49.015697Z"
+     "end_time": "2022-12-10T20:58:31.749105Z",
+     "start_time": "2022-12-10T20:58:30.721769Z"
     }
    },
    "outputs": [
@@ -1781,8 +1743,8 @@
    "id": "dacf4bfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:53.906470Z",
-     "start_time": "2022-12-02T22:10:50.080045Z"
+     "end_time": "2022-12-10T20:58:35.688050Z",
+     "start_time": "2022-12-10T20:58:31.757453Z"
     }
    },
    "outputs": [
@@ -1832,8 +1794,8 @@
    "id": "187ff26f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:10:57.918675Z",
-     "start_time": "2022-12-02T22:10:53.911092Z"
+     "end_time": "2022-12-10T20:58:39.649015Z",
+     "start_time": "2022-12-10T20:58:35.706794Z"
     }
    },
    "outputs": [
@@ -1878,8 +1840,8 @@
    "id": "9cda4737",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:11:01.656051Z",
-     "start_time": "2022-12-02T22:10:57.925623Z"
+     "end_time": "2022-12-10T20:59:04.204001Z",
+     "start_time": "2022-12-10T20:58:59.853621Z"
     }
    },
    "outputs": [
@@ -1927,8 +1889,8 @@
    "id": "704ac3ce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:11:01.688433Z",
-     "start_time": "2022-12-02T22:11:01.666028Z"
+     "end_time": "2022-12-10T20:59:04.244823Z",
+     "start_time": "2022-12-10T20:59:04.222265Z"
     }
    },
    "outputs": [
@@ -1995,8 +1957,8 @@
    "id": "711fc083",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:11:03.677067Z",
-     "start_time": "2022-12-02T22:11:01.700526Z"
+     "end_time": "2022-12-10T20:59:15.129154Z",
+     "start_time": "2022-12-10T20:59:13.407448Z"
     }
    },
    "outputs": [
@@ -2026,12 +1988,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "6a4e87a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-02T22:29:12.296224Z",
-     "start_time": "2022-12-02T22:29:12.266940Z"
+     "end_time": "2022-12-10T20:59:31.341643Z",
+     "start_time": "2022-12-10T20:59:31.301613Z"
     }
    },
    "outputs": [],
@@ -3812,12 +3774,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "d843c01f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T22:45:54.707342Z",
-     "start_time": "2022-12-09T22:45:52.564447Z"
+     "end_time": "2022-12-10T21:37:03.294612Z",
+     "start_time": "2022-12-10T21:37:03.206270Z"
     }
    },
    "outputs": [],
@@ -3941,10 +3903,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "5fc870d3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-10T21:37:17.788451Z",
+     "start_time": "2022-12-10T21:37:17.355990Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'insurance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [52]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#collecting the past archive and imnport class\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01minsurance\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mInsurance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Insurance\n\u001b[1;32m     13\u001b[0m model \u001b[38;5;241m=\u001b[39m xgb\u001b[38;5;241m.\u001b[39mXGBClassifier()\n\u001b[1;32m     15\u001b[0m model\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_cross_sell.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'insurance'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -3972,8 +3951,8 @@
     "    test_json = request.get_json()\n",
     "    \n",
     "    if test_json: #In there is data\n",
-    "        \n",
-    "        if isintance(test_json, dict): #unique example\n",
+    "           \n",
+    "        if isinstance(test_json, dict): #unique example\n",
     "            #in case there is only row\n",
     "            test_row = pd.DataFrame(test_json, index=[0] )\n",
     "            \n",
@@ -3985,7 +3964,7 @@
     "        \n",
     "        pipeline = Insurance()\n",
     "        \n",
-    "        df1 = pipeline.cleaniing_data(test_row)\n",
+    "        df1 = pipeline.cleaning_data(test_row)\n",
     "        \n",
     "        df2 = pipeline.feature_engineering(df1)\n",
     "        \n",
@@ -4031,16 +4010,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "d56d9719",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-10T21:35:09.588972Z",
+     "start_time": "2022-12-10T21:35:08.868099Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import json\n",
-    "import request\n",
+    "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "#loading the data of test"
+    "#loading the data of test\n",
+    "df10 = pd.read_csv('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/df_raw.csv')\n",
+    "\n",
+    "#remove the variable response\n",
+    "df10 = df10.drop(['response'], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b5180fdf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-10T21:35:22.503249Z",
+     "start_time": "2022-12-10T21:35:11.417934Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#convent DataFrame to json\n",
+    "\n",
+    "data = json.dumps(df10.to_dict(orient='records') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "3a38a921",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-10T22:51:51.390742Z",
+     "start_time": "2022-12-10T22:51:46.778848Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status code 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "#API Call\n",
+    "\n",
+    "#address call\n",
+    "#url = 'http://127.0.0.1:5000/predict' \n",
+    "url =  'http://192.168.1.7:5000/predict'\n",
+    "\n",
+    "#type of requisition\n",
+    "header = {'Content-type':'application/json'}\n",
+    "\n",
+    "#data the to be collected\n",
+    "data = data\n",
+    "\n",
+    "#send the data\n",
+    "r = requests.post(url, data, headers=header)\n",
+    "\n",
+    "print('Status code {}'.format(r.status_code) )"
    ]
   }
  ],
